# tasker

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  config.yaml  deploy.sh  main.py  pyproject.toml  railway.json  requirements.txt
app/: clip_test.py  config.py  image_recognition.py  models.py  routes.py  supabase_client.py  utils.py
app/static/css/: styles.css
app/templates/: challenge-complete.html  index.html
frontend/: .env.production  .gitignore  README.md  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ChallengeScreen.tsx  CompletionScreen.tsx  HouseHuntGame.tsx  PointsDisplay.tsx  ResultScreen.tsx  StartScreen.tsx
frontend/src/hooks/: useGameState.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
validation/: test_image_recognition.py  validation.csv
